## Version 2.8.0

* [MDAPI-312] [.NET] Implement DXFeedSubscription::get|setAggregationPeriod, get|setEventsBatchLimit methods
* Added `TradeId` field for events: `Trade`, `TradeETH` and `TimeAndSale`.
* Graal Native SDK version has been updated to 3.1.0.

## Version 2.7.1

* [MDAPI-273] [.NET] Attempt to execute managed code after the .NET runtime thread state has been destroyed

## Version 2.7.0

* [MDAPI-171] [.NET] Optimize OptionChainsBuilder for performance in .NET compared to Java

## Version 2.6.0

* [MDAPI-96] [.NET] Retrieve latest events from feed

## Version 2.5.2

* [MDAPI-165] [.NET] DxFeed.Graal.Net.Schedules.GetNextSession does not return null if no session exists

## Version 2.5.1

* [MDAPI-124] [.NET] Remove the ability to pass multiple sources for PriceLeveBookSample
  - To work with multiple sources, the MarketDepthModel should be used.

## Version 2.5.0

* [MDAPI-121] [.NET] Publish samples with the release
* [MDAPI-123] [.NET] Add the ability to set Java System Properties
  - Now any Java Properties can be set either through setting environment variables
    or using the dxfeed.system.properties file
  - All properties that are set via environment variables must be prefixed with DXFEED_
  - By default, the dxfeed.system.properties file is looked for in the runtime directory,
    but the path to it can also be set by setting the environment variable
    DXFEED_dxfeed.system.properties=/path/to/file
  - For separate configuration of endpoints with the role of feed, ondemand, publisher,
    dxfeed.properties and dxpublisher.properties files are also used respectively,
    properties set in these files have higher priority than dxfeed.system.properties,
    but only properties related to the endpoint can be set there
  - Example of setting environment variables for Linux and macOS:
    env DXFEED_dxfeed.address=demo.dxfeed.com:7300 ./app
  - Example of setting environment variables for Windows: