@@ -75,6 +75,10 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "MarketDepthModelSample", "s
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "PriceLevelBookSample", "samples\UI\PriceLevelBookSample\PriceLevelBookSample.csproj", "{A5B1FE68-8943-4340-BFEC-6D1B40823493}"
 EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "PriceLevelService", "PriceLevelService", "{4F21FA83-978F-44EF-8258-1D584DF88679}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "PriceLevelServiceClientSample", "samples\PriceLevelService\PriceLevelServiceClientSample\PriceLevelServiceClientSample.csproj", "{43291397-FDC9-4D31-BE5E-15F6E88B9E6F}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -177,6 +181,10 @@ Global
 		{A5B1FE68-8943-4340-BFEC-6D1B40823493}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{A5B1FE68-8943-4340-BFEC-6D1B40823493}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{A5B1FE68-8943-4340-BFEC-6D1B40823493}.Release|Any CPU.Build.0 = Release|Any CPU
+		{43291397-FDC9-4D31-BE5E-15F6E88B9E6F}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{43291397-FDC9-4D31-BE5E-15F6E88B9E6F}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{43291397-FDC9-4D31-BE5E-15F6E88B9E6F}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{43291397-FDC9-4D31-BE5E-15F6E88B9E6F}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -212,5 +220,7 @@ Global
 		{B74E8A86-1AB7-4B36-AED3-292CDD95BF90} = {5F74BD34-C2D4-436B-8243-FB0F3BB9F0AC}
 		{930B1039-B76C-42C5-AD0F-9FA1A1FC9D84} = {5F74BD34-C2D4-436B-8243-FB0F3BB9F0AC}
 		{A5B1FE68-8943-4340-BFEC-6D1B40823493} = {5F74BD34-C2D4-436B-8243-FB0F3BB9F0AC}
+		{4F21FA83-978F-44EF-8258-1D584DF88679} = {C4490D74-2970-4A1B-8178-A724A06B140A}
+		{43291397-FDC9-4D31-BE5E-15F6E88B9E6F} = {4F21FA83-978F-44EF-8258-1D584DF88679}
 	EndGlobalSection
 EndGlobal
