@@ -1,0 +1,88 @@
+﻿// <copyright file="Program.cs" company="Devexperts LLC">
+// Copyright © 2026 Devexperts LLC. All rights reserved.
+// This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
+// If a copy of the MPL was not distributed with this file, You can obtain one at http://mozilla.org/MPL/2.0/.
+// </copyright>
+
+using System.Diagnostics;
+using DxFeed.Graal.Net.Events.Candles;
+using DxFeed.Graal.Net.Events.Market;
+using DxFeed.Graal.Net.Orcs;
+using DxFeed.Graal.Net.Utils;
+
+namespace DxFeed.Graal.Net.Samples;
+
+/// <summary>
+/// This sample that shows how to use ORCS API by PriceLevelService.
+/// </summary>
+internal abstract class Program
+{
+    private static void PrintUsage()
+    {
+        const string usageString = $@"
+Usage:
+<address> <symbol> <source> <from> <to>
+
+Where:
+    address - The server RMI address. To pass an authorization token, add to the address: ""[login=entitle:<token>]"":,
+              e.g.: <address>[login=entitle:<token>]
+    symbol  - Is symbol to retrieve, for example 'AAPL{{=d,gr=s}}'
+    source  - Is source to retrieve, for example 'NTV'
+    from    - Is from-time for history subscription in standard formats.
+              Same examples of valid from-time:
+                  20070101-123456
+                  20070101-123456.123
+                  2005-12-31 21:00:00
+                  2005-12-31 21:00:00.123+03:00
+                  2005-12-31 21:00:00.123+0400
+                  2007-11-02Z
+                  123456789 - value-in-milliseconds
+    to      - Is to-time.
+
+Examples:
+    orcs.dxfeed.com:7777 AAPL{{=d,gr=s}} NTV 20260110-100000 20260110-230000
+";
+        Console.WriteLine(usageString);
+    }
+
+    public static void Main(string[] args)
+    {
+        if (args.Length < 5)
+        {
+            PrintUsage();
+            return;
+        }
+
+        // Parses input arg.
+        var address = args[0];
+        var symbol = CandleSymbol.ValueOf(args[1]);
+        var source = OrderSource.ValueOf(args[2]);
+        var fromTime = CmdArgsUtil.ParseFromTime(args[3]);
+        var toTime = CmdArgsUtil.ParseFromTime(args[4]);
+        var timeGapBound = TimeSpan.FromMinutes(1);
+        var printQuotes = true;
+
+        using var service = new PriceLevelService(address);
+        var authOrderSource = service.GetAuthOrderSource();
+
+        Console.WriteLine($"Authorized sources: {authOrderSource.GetByOrderSources().Keys}");
+
+        var stopwatch = Stopwatch.StartNew();
+        var orders = service.GetOrders(symbol, source, fromTime, toTime, "sample");
+
+        stopwatch.Stop();
+        Console.WriteLine($"Received {orders.Count} orders in {stopwatch.ElapsedMilliseconds} ms");
+
+        if (SystemProperty.GetProperty("validate") != null)
+        {
+            PriceLevelChecker.Validate(orders, timeGapBound, printQuotes);
+        }
+
+        stopwatch.Restart();
+
+        var quotes = service.GetQuotes(CandleSymbol.ValueOf(symbol.BaseSymbol + "{gr=s}"), fromTime, toTime, "sample");
+
+        stopwatch.Stop();
+        Console.WriteLine($"Received {quotes.Count} quotes in {stopwatch.ElapsedMilliseconds} ms");
+    }
+}
