@@ -33,9 +33,17 @@ public class PriceLevelService : IDisposable
 
     /// <summary>
     /// Returns list of price levels for the specified <see cref="CandleSymbol"/> within passed <c>from</c> and <c>to</c> times.
+    /// The events are ordered by <see cref="Order.Time">time</see> in the collection.
+    /// <p/>
+    /// Passed candle symbol shall contain supported <see cref="CandlePeriod"/> and custom attribute
+    /// called granularity with the key <c>GranularityAttributeKey</c>. Granularity value shall be represented by
+    /// integer value in seconds. Minimal value for granularity is 1 second.
+    /// <p/>
+    /// If passed <see cref="CandlePeriod"/> or granularity value are not supported by the service
+    /// the empty list will be returned.
     /// </summary>
-    /// <param name="candleSymbol"><see cref="CandleSymbol"/> to request.</param>
-    /// <param name="orderSource"><see cref="OrderSource"/> to request.</param>
+    /// <param name="candleSymbol">The <see cref="CandleSymbol"/> to request.</param>
+    /// <param name="orderSource">The <see cref="OrderSource"/> to request.</param>
     /// <param name="from">From time in UTC</param>
     /// <param name="to">To time in UTC</param>
     /// <param name="caller">The caller identifier.</param>
@@ -43,21 +51,10 @@ public class PriceLevelService : IDisposable
     public List<Order> GetOrders(
         CandleSymbol candleSymbol,
         OrderSource orderSource,
-        TimeSpan from,
-        TimeSpan to,
-        string caller) =>
+        DateTimeOffset from,
+        DateTimeOffset to,
+        string caller = "qdnet") =>
         handle.GetOrders(candleSymbol, orderSource, from, to, caller);
-
-    /// <summary>
-    ///
-    /// </summary>
-    /// <param name="candleSymbol"></param>
-    /// <param name="orderSource"></param>
-    /// <param name="from"></param>
-    /// <param name="to"></param>
-    /// <returns></returns>
-    public List<Order> GetOrders(CandleSymbol candleSymbol, OrderSource orderSource, TimeSpan from, TimeSpan to) =>
-        handle.GetOrders(candleSymbol, orderSource, from, to);
 
     /// <summary>
     /// Returns available to the client order sources and symbols for each <see cref="OrderSource"/>. Order source and symbols
@@ -68,25 +65,16 @@ public class PriceLevelService : IDisposable
     public AuthOrderSource GetAuthOrderSource() => new(handle.GetAuthOrderSource());
 
     /// <summary>
-    ///
+    /// Returns list of quotes for the specified <see cref="CandleSymbol"/> within passed <c>from</c> and <c>to</c> times.
+    /// The quotes are ordered by <see cref="Quote.Time">time</see> in the collection.
     /// </summary>
-    /// <param name="candleSymbol"></param>
-    /// <param name="from"></param>
-    /// <param name="to"></param>
-    /// <param name="caller"></param>
-    /// <returns></returns>
-    public List<Quote> GetQuotes(CandleSymbol candleSymbol, TimeSpan from, TimeSpan to, string caller) =>
+    /// <param name="candleSymbol">The <see cref="CandleSymbol"/> to request.</param>
+    /// <param name="from">From time in UTC</param>
+    /// <param name="to">To time in UTC</param>
+    /// <param name="caller">The caller identifier.</param>
+    /// <returns>A list of <see cref="Quote"/> events sorted in ascending order by time.</returns>
+    public List<Quote> GetQuotes(CandleSymbol candleSymbol, DateTimeOffset from, DateTimeOffset to, string caller = "qdnet") =>
         handle.GetQuotes(candleSymbol, from, to, caller);
-
-    /// <summary>
-    ///
-    /// </summary>
-    /// <param name="candleSymbol"></param>
-    /// <param name="from"></param>
-    /// <param name="to"></param>
-    /// <returns></returns>
-    public List<Quote> GetQuotes(CandleSymbol candleSymbol, TimeSpan from, TimeSpan to) =>
-        handle.GetQuotes(candleSymbol, from, to);
 
     /// <summary>
     /// Closes (disconnects) this service.
@@ -94,5 +82,9 @@ public class PriceLevelService : IDisposable
     public void Close() => handle.Close();
 
     /// <inheritdoc />
-    public void Dispose() => Close();
+    public void Dispose()
+    {
+        Close();
+        GC.SuppressFinalize(this);
+    }
 }
