@@ -1,5 +1,6 @@
 ## Version 2.8.0
 
+* [MDAPI-313] [.NET] Implement ORCS API.
 * [MDAPI-312] [.NET] Implement DXFeedSubscription::get|setAggregationPeriod, get|setEventsBatchLimit methods
 * Added `TradeId` field for events: `Trade`, `TradeETH` and `TimeAndSale`.
 * Graal Native SDK version has been updated to 3.1.0.
